implement add calories and reset calories functions

--- a/app/src/main/res/layout/activity_track.xml
+++ b/app/src/main/res/layout/activity_track.xml
@@ -83,7 +83,7 @@
             android:textSize="20sp" />
 
         <Button
-            android:id="@+id/resetRecipesButton"
+            android:id="@+id/resetCaloriesButton"
             android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
