--- a/app/src/main/res/layout/activity_recipe.xml
+++ b/app/src/main/res/layout/activity_recipe.xml
@@ -4,14 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RecipeActivity">
+    tools:context=".activities.RecipeActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center_horizontal"
         android:orientation="vertical">
-
 
         <TextView
             android:id="@+id/recipeViewTitle"
@@ -22,6 +21,14 @@
             android:textAlignment="center"
             android:textSize="25sp"
             android:textStyle="bold" />
+
+        <Button
+            android:id="@+id/backButton"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="50dp"
+            android:text="@string/goBack" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -51,7 +58,7 @@
                         android:layout_height="150dp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"/>
+                        app:layout_constraintTop_toTopOf="parent" />
 
                     <TextView
                         android:id="@+id/recipeTitle1"
@@ -127,14 +134,6 @@
             </androidx.cardview.widget.CardView>
 
         </LinearLayout>
-
-        <Button
-            android:id="@+id/backButton"
-            android:layout_width="300dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="50dp"
-            android:text="@string/goBack" />
     </LinearLayout>
 
 
